transição de perguntas e botões de navegação

--- a/index.html
+++ b/index.html
@@ -13,36 +13,16 @@
     <button class="inicio-btn" type="button">Iniciar QUIZ!</button>
 
     <div class="container-quiz">
-        <div>
-            <h1 class="pergunta"></h1>
-            <fieldset>
-                <input id="res1" type="radio" name="input">
-                <label class="answer" for="res1"></label>
-            </fieldset>
-            <fieldset>
-                <input id="res2" type="radio" name="input">
-                <label class="answer" for="res2"></label>
-            </fieldset>
-            <fieldset>
-                <input id="res3" type="radio" name="input">
-                <label class="answer" for="res3"></label>
-            </fieldset>
-            <fieldset>
-                <input id="res4" type="radio" name="input">
-                <label class="answer" for="res4"></label>
-            </fieldset>
-            <fieldset>
-                <input id="res5" type="radio" name="input">
-                <label class="answer" for="res5"></label>
-            </fieldset>
-        </div>
+        <h1 class="pergunta"></h1>
+        <div class="respostas"></div>
         <div class="buttons">
-            <button class="nav prev">
+            <button class="nav prev remove">
                 <i class="fas fa-chevron-left"></i>
             </button>
             <button class="nav next">
                 <i class="fas fa-chevron-right"></i>
             </button>
+            <button class="nav fim-btn remove">Finalizar!</button>
         </div>
     </div>
 
